# handson-llms-from-scratch

./: .gitmodules  LICENSE  README.md  pyproject.toml
chapter02/01-main-chapter/: chapter02.ipynb
chapter04/01-main-chapter/: ch04.ipynb
