[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchtext>=0.18.0",
    "torchvision>=0.25.0",
]
